# NewscastAI

./: .gitignore  ARCHITECTURE.md  Dockerfile.api  Dockerfile.mcp  Dockerfile.worker  README.md  api_call.ps1  api_call_1.ps1  build.sh  docker-compose.yml  generate_architecture.py  get_audio.sh  nginx.conf  pyproject.toml  requirements.txt  test_api.sh  test_generate_api.sh
searxng/: settings.yml
services/api/: __init__.py  app.py  db.py  models.py  rss.py  schemas.py  settings.py
services/mcp/: __init__.py  base_agent.py  hostify_graph.py  hostify_schema.py  humanification_agent.py  server.py  settings.py  summarize.py  tts.py
services/worker/: __init__.py  agent_search.py  assembler.py  base_agent.py  constants.py  ingestion.py  retrieval_crew.py  server.py  settings.py  summarizer_client.py  tasks.py  tts_client.py
