[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "newscast-ai"
version = "0.1.0"
description = "Personalized daily audio news briefing via multi-agent retrieval and LangGraph script generation."
requires-python = ">=3.10"
readme = "README.md"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
known_first_party = ["services"]
known_third_party = [
    "fastapi", "sqlalchemy", "pydantic", "celery",
    "langgraph", "crewai", "anthropic", "transformers",
    "feedparser", "aiohttp", "tldextract"
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
